# remix-pipeline-toolkit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.sh
docs/: BITWIG_SETUP.md  RECIPES.md
scripts/: install_bitwig_controller.sh
src/: cli.py  config.py
src/analysis/: blueprint.py  bpm.py  chord_detection.py  energy.py  key_detection.py  structure.py
src/bitwig/: RemixPipeline.control.js  bridge.py  midi_player.py  osc.py
src/pipeline/: orchestrator.py  quantizer.py  separator.py  transcriber.py
tests/: test_chord_detection.py  test_config.py  test_key_detection.py  test_osc.py  test_pipeline_integration.py  test_quantizer.py
