[project]
name = "remix-toolkit"
version = "0.1.0"
description = "Audio → Analysis → Stems → MIDI → Bitwig Studio remix pipeline"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "demucs>=4.0",
    "basic-pitch>=0.3",
    "pretty-midi>=0.2.10",
    "librosa>=0.10",
    "numpy>=1.24",
    "soundfile>=0.12",
    "click>=8.1",
    "mido[ports-rtmidi]>=1.3",
    "torchcodec",       # required by torchaudio for audio loading (Demucs)
    "onnxruntime",      # Basic Pitch model inference backend
    "scipy<1.12",       # scipy.signal.gaussian removed in 1.12, required by resampy/basic-pitch
    "setuptools<70",    # pkg_resources required by resampy
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
remix = "src.cli:cli"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
